# spatial-omics-vis

./: .gitignore  README.md
omics-backend/: 151673_changed_details.csv  151673_prediction_details.csv  VT3D.py  idea1.py  main.py  pyproject.toml  readme.md
omics-web/: README.md  index.html  package-lock.json  package.json  vite.config.js
omics-web/src/: App.svelte  app.css
omics-web/src/component/: lassomode.svelte  overview.svelte  plot.svelte  spotInspection.svelte
