[tool.poetry]
name = "omics-backend"
version = "0.1.0"
description = ""
authors = ["April-lemonade <641676557@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "<1.6.0"
scanpy = "^1.11.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
anndata = "^0.11.4"
matplotlib = "^3.10.1"
squidpy = "^1.6.5"
xarray-dataclasses = ">=1.8.0"
igraph = "^0.11.8"
leidenalg = "^0.10.2"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
sqlalchemy = "^2.0.40"
databases = "^0.9.0"
aiomysql = "^0.2.0"
pydantic = "^2.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
